Basic structure of auth

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,6 @@
         { "directory": "./src/renderer", "changeProcessCWD": true },
         { "directory": "./src/main", "changeProcessCWD": true }
     ],
-    "scss.validate": false
+    "scss.validate": false,
+    "editor.tabSize": 2
 }
