--- a/src/renderer/package.json
+++ b/src/renderer/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@ant-design/icons": "^4.2.2",
     "@babel/core": "7.9.0",
+    "@monaco-editor/react": "^3.6.3",
     "@svgr/webpack": "4.3.3",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
