--- a/src/renderer/jsconfig.json
+++ b/src/renderer/jsconfig.json
@@ -3,6 +3,7 @@
     "baseUrl": "./",
     "paths": {
       "@common/*": ["./src/common/*"],
+      "@services/*": ["./src/services/*"],
       "@/*": ["./src/*"],
       "@@/*": ["./src/views/*"]
     }
