--- a/src/renderer/package.json
+++ b/src/renderer/package.json
@@ -5,7 +5,6 @@
   "dependencies": {
     "@ant-design/icons": "^4.2.2",
     "@babel/core": "7.9.0",
-    "@monaco-editor/react": "^3.6.3",
     "@svgr/webpack": "4.3.3",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
@@ -40,6 +39,8 @@
     "jest-resolve": "24.9.0",
     "jest-watch-typeahead": "0.4.2",
     "mini-css-extract-plugin": "0.9.0",
+    "monaco-editor": "^0.21.2",
+    "monaco-editor-webpack-plugin": "^2.0.0",
     "optimize-css-assets-webpack-plugin": "5.0.3",
     "pnp-webpack-plugin": "1.6.4",
     "postcss-flexbugs-fixes": "4.1.0",
