--- a/src/renderer/package.json
+++ b/src/renderer/package.json
@@ -50,11 +50,13 @@
     "postcss-normalize": "8.0.1",
     "postcss-preset-env": "6.7.0",
     "postcss-safe-parser": "4.0.1",
+    "prismjs": "^1.22.0",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-app-polyfill": "^1.0.6",
     "react-dev-utils": "^10.2.1",
     "react-dom": "^16.13.1",
+    "react-prism": "^4.3.2",
     "react-router-dom": "^5.2.0",
     "react-sortable-hoc": "^1.11.0",
     "resolve": "1.15.0",
