--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     }
   },
   "dependencies": {
+    "electron-reloader": "^1.0.1",
     "electron-squirrel-startup": "^1.0.0"
   },
   "devDependencies": {
