--- a/src/renderer/package.json
+++ b/src/renderer/package.json
@@ -57,6 +57,7 @@
     "react-dev-utils": "^10.2.1",
     "react-dom": "^16.13.1",
     "react-prism": "^4.3.2",
+    "react-query": "^2.26.3",
     "react-router-dom": "^5.2.0",
     "react-sortable-hoc": "^1.11.0",
     "resolve": "1.15.0",
